<resources>
    <string name="app_name">PolText</string>
    <string name="input_email_hint">Email</string>
    <string name="input_password_hint">Password</string>
    <string name="log_in">Log in</string>
    <string name="register">Register</string>
    <string name="profile_image">Profile Image</string>
    <string name="create_account">No account? Create it here!</string>
    <string name="name">Name:</string>
    <string name="enter_name_and_password">Please enter username and password</string>
    <string name="fullfill_all_fields">Please fullfill all  fields</string>
    <string name="image_picker">Pick an image</string>
    <string name="select_image">Select image from gallery</string>
    <string name="take_picture">Take a picture</string>
    <string name="permissions_not_granted">Camera permissions are nprivatot granted</string>
    <string name="enter_email">Enter email</string>
    <string name="email_exists">Email already exists</string>
    <string name="next">Next</string>
    <string name="error_while_creating_user">Error while creating user has occured</string>
    <string name="create_user_failure">Registration has failed</string>
    <string name="fetch_users_failure">Failure to fetch users list</string>
    <string name="upload_photo_failure">Upload photo failure</string>
    <string name="profile">Profile</string>
    <string name="public_chat">Public Chat</string>
    <string name="private_chat">Private Chat</string>
    <string name="send_message_error">Send message error!</string>
    <string name="fetch_error">Fetch Data Error</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="logout">Log out</string>
    <string name="no_messages">There are no messages yet</string>
    <string name="email">Email:</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="go_back">Go back</string>
    <string name="save">Save</string>
    <string name="enter_message">Enter message....</string>
    <string name="help">Help</string>
    <string name="rules_title">Chat rules</string>
    <string name="rules"><![CDATA[<ol><li> Be nice to other users</li><li> Don\'t swear</li><li> Have fun!</li></ol>]]></string>
</resources>