<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_gradient"
        tools:context=".screens.auth.login.LoginActivity">

        <TextView
            android:id="@+id/textView"
            style="@style/Header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_48sdp"
            android:text="@string/log_in"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/email_edit_text"
            style="@style/EditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_48sdp"
            android:autofillHints="email"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/input_email_hint"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_button"
            android:layout_width="0dp"
            android:layout_height="@dimen/_42sdp"
            android:layout_marginTop="@dimen/_48sdp"
            android:text="@string/log_in"
            android:textColor="@color/white"
            app:backgroundTint="@color/mandarin"
            app:elevation="2dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/password_edit_text" />

        <EditText
            android:id="@+id/password_edit_text"
            style="@style/EditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_24sdp"
            android:autofillHints="password"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/input_password_hint"
            android:inputType="textPassword"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/email_edit_text" />

        <TextView
            android:id="@+id/move_to_register_screen_btn"
            style="@style/TextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_48sdp"
            android:background="@drawable/top_border_gray"
            android:gravity="center"
            android:text="@string/create_account"
            app:layout_constraintBottom_toBottomOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/_24sdp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/_24sdp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>