<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_register_last"
    android:fillViewport="true"
    android:scrollbars="none">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_gradient"
        tools:context=".screens.auth.RegisterFragment">

        <TextView
            android:id="@+id/textView"
            style="@style/TextViewStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_48sdp"
            android:text="@string/enter_name_and_password"
            android:textAlignment="center"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/name_edit_text"
            style="@style/EditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_120sdp"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/name"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/register_button"
            android:layout_width="0dp"
            android:layout_height="@dimen/_42sdp"
            android:layout_marginTop="@dimen/_24sdp"
            android:text="@string/register"
            android:textColor="@color/mandarin"
            android:visibility="visible"
            app:backgroundTint="@color/ghost_white"
            app:elevation="2dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/password_edit_text" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:visibility="gone"
            android:layout_width="@dimen/_42sdp"
            android:layout_height="@dimen/_42sdp"
            app:layout_constraintBottom_toBottomOf="@+id/register_button"
            app:layout_constraintEnd_toEndOf="@+id/register_button"
            app:layout_constraintStart_toStartOf="@+id/register_button"
            app:layout_constraintTop_toTopOf="@+id/register_button" />


        <EditText
            android:id="@+id/password_edit_text"
            style="@style/EditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_24sdp"
            android:autofillHints="password"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/input_password_hint"
            android:inputType="textPassword"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/name_edit_text" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/_24sdp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/_24sdp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>