<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".screens.home.profile.EditProfileFragment">

    <TextView
        android:id="@+id/name_label"
        style="@style/TextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_36sdp"
        android:gravity="center"
        android:text="@string/name"
        app:layout_constraintBottom_toBottomOf="@+id/name"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/name" />

    <EditText
        android:id="@+id/name"
        style="@style/EditText.BoldFont"
        android:layout_width="0dp"
        android:layout_height="@dimen/_36sdp"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_236sdp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:paddingHorizontal="@dimen/_8sdp"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/edit_name_btn"
        app:layout_constraintStart_toEndOf="@+id/name_label"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Janek" />

    <TextView
        android:id="@+id/email_label"
        style="@style/TextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_36sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:gravity="center"
        android:text="@string/email"
        app:layout_constraintBottom_toBottomOf="@+id/email"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/edit_name_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"

        app:layout_constraintBottom_toBottomOf="@+id/name"
        app:layout_constraintEnd_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toTopOf="@+id/name"
        app:srcCompat="@drawable/edit_icon" />

    <EditText
        android:id="@+id/email"
        style="@style/EditText.BoldFont"
        android:layout_width="0dp"
        android:layout_height="@dimen/_36sdp"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:paddingHorizontal="@dimen/_8sdp"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/edit_email_btn"
        app:layout_constraintStart_toEndOf="@+id/email_label"
        app:layout_constraintTop_toBottomOf="@+id/name"
        tools:text="janek@gmail.com" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/edit_email_btn"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_36sdp"
        android:padding="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="@+id/email"
        app:layout_constraintEnd_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toTopOf="@+id/email"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/edit_icon" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/_12sdp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/_12sdp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_btn"
        android:layout_width="@dimen/_136sdp"
        android:layout_height="@dimen/_36sdp"
        android:layout_marginTop="@dimen/_56sdp"
        android:backgroundTint="@color/mandarin"
        android:text="@string/save"
        app:layout_constraintEnd_toStartOf="@+id/guideline1"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/email" />
</androidx.constraintlayout.widget.ConstraintLayout>
